# clang-annos

./: .gitignore  CMakeLists.txt
enerc/: CMakeLists.txt
enerc/checkers/enerc/: CMakeLists.txt
enerc/checkers/grappa/: CMakeLists.txt  GrappaTypeChecker.cpp
enerc/common/: NodeTyper.h  TyperConsumer.h
enerc/examples/: CMakeLists.txt  make_global.cpp  simple.cpp  simple.llvm
enerc/lit-test/: CMakeLists.txt  lit.cfg  lit.site.cfg.in
enerc/lit-test/grappa/: basic.cpp
lib/CodeGen/: CGExpr.cpp
